# models

./: CONTRIBUTING.md  CONTRIBUTING_CN.md  OWNERS  README.md  README_CN.md
.gitee/: PULL_REQUEST_TEMPLATE.md
.gitee/ISSUE_TEMPLATE/: Documentation.yml  Intern.yml  Requirement.yml  Task-Tracking.yml  ThirdParty.yml  bug_report.yml  config.yml  feature.yml  question.yml
.jenkins/: OWNERS
.jenkins/check/config/: filter_cppcheck.txt  filter_cpplint.txt  filter_linklint.txt  filter_pylint.txt  whitelizard.txt
.jenkins/rules/codespell/: codespell.allow
benchmark/ascend/bert/: README.md  README_CN.md  pretrain_config_Ascend_Boost.yaml  pretrain_eval.py  run_pretrain.py
benchmark/ascend/resnet/: README.md  README_CN.md  create_imagenet2012_label.py  eval.py  export.py  train.py
community/cv/3D-LWNet/: README.md  eval.py  train.py
community/cv/CPNet/: README.md  eval.py  train.py
community/cv/LR-EGAN/: README.md  TrainAndEval.py  configs.py  dataloader.py  preprocess.py  requirements.txt  selection.py
community/cv/SGAE/: README.md  SGAE_eval.py  dataset.py  requirements.txt
community/cv/SRFlow/: README_CN.md  SRFlow_DF2K_4X.yml  eval.py  requirements.txt  train.py  train2test.py
community/cv/pointRCNN/: README_CN.md  eval.py  pth2ckpt.py  reqeuiment.txt
community/cv/pointrend/: README.md  default_config.yaml  eval.py  postprocess.py  requirements.txt  train.py
community/cv/snn/: README.md  eval.py  train.py
community/cv/wgan_gp/: eval.py  (+2 more)
how_to_contribute/: CONTRIBUTING_ATTENTION.md  CONTRIBUTING_ATTENTION_CN.md  README_TEMPLATE.md  README_TEMPLATE_CN.md  README_template.md
official/: README.md  README_CN.md  benchmark.md  benchmark_CN.md
official/audio/ecapa_tdnn/ascend310_infer/: 310infer_preprocess.py  CMakeLists.txt  build.sh  eval_310.py
official/cv/OpenPose/infer/mxbase/proto/: CMakeLists.txt  mxpiOpenposeProto.proto
official/cv/PVNet/ascend310_infer/: CMakeLists.txt
official/cv/PVNet/ascend310_infer/src/: main.cc
official/cv/PVNet/cpp_infer/: CMakeLists.txt
official/cv/PVNet/cpp_infer/src/: main.cc
official/cv/ResNeXt/infer/mxbase/: CMakeLists.txt
official/cv/ResNeXt/infer/mxbase/src/: resnext50Classify.h
official/cv/openpose/infer/sdk/plugins/: CMakeLists.txt  MxpiOpenposePostProcess.cpp  MxpiOpenposePostProcess.h
official/cv/psenet/infer/mxbase/: CMakeLists.txt  build.sh
official/cv/psenet/infer/mxbase/src/: PsenetDetection.h  main.cpp
official/cv/retinanet/infer/mxbase/: CMakeLists.txt  build.sh  main.cpp
official/lite/: OWNERS  README_CN.md
official/recommend/Wide_and_Deep/cpp_infer/: CMakeLists.txt  build.sh
official/recommend/Wide_and_Deep/cpp_infer/src/: main.cc
research/: README.md  README_CN.md
research/cv/FaceAttribute/infer/mxbase/faceattribute/: CMakeLists.txt  FaceAttribute.cpp  FaceAttribute.h  build.sh  main_opencv.cpp  run.sh
research/cv/FaceRecognitionForTracking/infer/util/plugins/: CMakeLists.txt  MxpiTransposePlugin.cpp  MxpiTransposePlugin.h
research/cv/I3D/ascend_310_infer/src/: CMakeLists.txt  main.cc  utils.cc
research/cv/LightCNN/infer/mxbase/: CMakeLists.txt  build.sh
research/cv/LightCNN/infer/mxbase/src/: Lightcnn.cpp  Lightcnn.h  main.cpp
research/cv/PAMTRI/infer/mxbase/: CMakeLists.txt  PAMTRIClassifyOpencv.cpp  PAMTRIClassifyOpencv.h  build.sh  main_opencv.cpp
research/cv/Pix2Pix/infer/mxbase/: CMakeLists.txt  build.sh
research/cv/Pix2Pix/infer/mxbase/src/: Pix2Pix.cpp  Pix2Pix.h  main.cpp
research/cv/faceboxes/infer/mxbase/: CMakeLists.txt  build.sh
research/cv/faceboxes/infer/mxbase/src/: FaceboxesDetection.cpp  FaceboxesDetection.h  main.cpp
research/cv/fairmot/infer/mxbase/: CMakeLists.txt  build.sh
research/cv/fairmot/infer/mxbase/src/: Fairmot.cpp  Fairmot.h  main.cpp
research/cv/fairmot/infer/mxbase/src/PostProcess/: FairmotMindsporePost.cpp  FairmotMindsporePost.h
research/cv/hed/infer/mxbase/: CMakeLists.txt  HedEdgeDetection.cpp  HedEdgeDetection.h  build.sh  main.cpp  mxbase_eval.py  run.sh
research/cv/metric_learn/infer/mxbase/: CMakeLists.txt  build.sh
research/cv/metric_learn/infer/mxbase/src/: MetricLearn.cpp  MetricLearn.h  main.cpp
research/cv/siamRPN/ascend_310_infer/: CMakeLists.txt  build.sh
research/cv/siamRPN/ascend_310_infer/inc/: utils.h
research/cv/siamRPN/ascend_310_infer/src/: main.cc  utils.cc
research/cv/sphereface/infer/mxbase/: CMakeLists.txt  build.sh
research/cv/sphereface/infer/mxbase/src/: SphereFaceOpencv.h
research/cv/ssd_ghostnet/infer/mxbase/C++/: CMakeLists.txt  SSDGhost.cpp  SSDGhost.h  main_ssd.cpp  run.sh
research/cv/ssd_ghostnet/infer/mxbase/C++/PostProcess/: CMakeLists.txt  SsdGhost_MindsporePost.cpp  SsdGhost_MindsporePost.h  build.sh
research/cv/ssd_resnet50/infer/mxbase/C++/: CMakeLists.txt  ResNet50Base.cpp  ResNet50_main.cpp  SSDResNet50.h  run.sh
research/cvtmodel/: README_CN.md
transformer/: README.md  README_CN.md  create_dynamic_data.py  default_config_large.yaml  default_config_large_gpu.yaml  eval.py  mindspore_hub_conf.py  train.py
transformer/scripts/: run_distribute_train_ascend.sh  run_distribute_train_ascend_multi_machines.sh  run_distribute_train_gpu.sh  run_eval.sh  run_standalone_train.sh
transformer/src/: beam_search.py  dataset.py  transformer_for_train.py  transformer_model.py
utils/ascend310_env_set/: README.md  README_CN.md
utils/ascend_distributed_launcher/: README.md
utils/cpp_infer/: README.md  README_CN.md  imgid2label.py
utils/hccl_tools/: README.md  hccl_tools.py  merge_hccl.py
utils/visualization/: README.md  visualizer.py
yolov5_dynamic_shape/: README.md  eval.py  eval_onnx.py  export.py  postprocess.py  train.py
yolov5_dynamic_shape/infer/: docker_start_infer.sh  requirements.txt
yolov5_dynamic_shape/model_utils/: moxing_adapter.py
yolov5_dynamic_shape/modelarts/: train_start.py
yolov5_dynamic_shape/scripts/: docker_start.sh  run_distribute_train.sh  run_distribute_train_gpu.sh  run_eval.sh  run_eval_onnx.sh  run_infer_310.sh
yolov5_dynamic_shape/src/: backbone.py  initializer.py  loss.py  transforms.py  util.py  yolo.py  yolo_dataset.py
(+14196 files in other folders)
